--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-weight: 900;
             font-size: 900;
             margin-left: 10px;
+            margin-left: 11px;
         }
         h3{
              margin-left: 10px;
